2009-01-29 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSDisplayServer.h
	(-setPartentWindow:forChildWindow:),
	* Source/GSDisplayServer.m (-setPartentWindow:forChildWindow:):
	New method.
	* Source/NSWindow.m (-setParentWindow:, -_initBackendWindow): Use
	this new method.
	* Source/NSPopUpButtonCell.m (-attachPopUpWithFrame:inView:,
	-dismissPopUp):  Use child window mechanism for the popup menu.

2009-01-28 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m (GSWindowWithNumber): Protect agains
	windowmaps not being set.

2009-01-27 15:28-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibLoading.m: Temporarily comment out the release of 
	connections until we find the cause of some current crashes.  This
	will be reverted ASAP.
	* Source/NSDrawer.m: Don't slide the window out, just appear where it
	needs to be.

2009-01-27 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSAttributedString.h: Add missing MacOSX methods.
	* Source/NSAttributedString.m: Rewrote data loading and add
	setting of NSError.
	* Headers/AppKit/NSLayoutManager.h (-attachmentSizeForGlyphAtIndex:, 
	showAttachmentCell:inRect:characterIndex:): Declare these missing
	methods. 
	* Source/NSLayoutManager.m: Implement and use them.
	* Source/NSTextView.m (-dragSelectionWithEvent:...): Use layout
	manager attachment methods.

2009-01-26 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAttributedString.m (-dataFromRange:...,
	-fileWrapperFromRange:...): Basic implementation.

2009-01-25 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSMenu.m: Keep the main menu in the main window (or visible
	if there is no main menu) when using microsoft style menus.
	* Source/NSWindow.m: If the main windows closes and it contains
	the main menu, unset the menu.

2009-01-25 11:51-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSMenuView.m: Return from the trackWithEvent: method
	if the indexOfActionToExecute is -1.
